# datasette-litestream

./: .gitignore  Justfile  README.md  build.sh  download.sh  metadata.yaml  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_litestream/: __init__.py
datasette_litestream/templates/: litestream.html
demo/: metadata.yaml
litestream/: .gitignore  build.sh  download.sh  pyproject.toml
litestream/litestream/: __init__.py
src/datasette_litestream/: __init__.py
src/datasette_litestream/templates/: litestream.html
tests/: test_datasette_litestream.py
