[project]
name = "datasette-litestream"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = ["datasette", "prometheus-client"]

[project.urls]
Homepage = "https://github.com/datasette-io/datasette-litestream"
Changelog = "https://github.com/datasette-io/datasette-litestream/releases"
Issues = "https://github.com/datasette-io/datasette-litestream/issues"
CI = "https://github.com/datasette-io/datasette-litestream/actions"


[project.entry-points.datasette]
litestream = "datasette_litestream"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
datasette_litestream = ["bin/*", "templates/*.html"]
